Early return on translate error.

It seems this was missing before.

Bug: 883123
Change-Id: Ic9f12b5b572a0e2681f671d34be7db3afb7e18a8
Reviewed-on: https://chromium-review.googlesource.com/1220045
Reviewed-by: David Roger <droger@chromium.org>
Commit-Queue: John Wu <jzw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590704}
Former-commit-id: cff319575f64f7de8907c958d5e24bebfca85cc7